--- a/.github/workflows/generate-maps.yml
+++ b/.github/workflows/generate-maps.yml
@@ -63,15 +63,30 @@ jobs:
           set -e
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
+          # Ensure we are up-to-date to avoid non-fast-forward push
+          git fetch origin main
+          git pull --rebase origin main || true
+
           mkdir -p generated
           cp -f mapa_baleares_openmeteo.png generated/
           cp -f mapa_baleares_min.png generated/
           cp -f mapa_baleares_max.png generated/
-          git add generated/*.png
+
+          git add generated/*.png || true
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
             git commit -m "chore: update generated weather maps [skip ci]"
-            git push
+            # Retry push once on non-fast-forward by rebasing again
+            if git push origin HEAD:main; then
+              echo "Pushed successfully"
+            else
+              echo "Push failed, attempting rebase and retry..."
+              git fetch origin main
+              git pull --rebase origin main || true
+              git push origin HEAD:main
+            fi
           fi
 
