ci: make push robust by resetting to origin/main and retrying

--- a/.github/workflows/generate-maps.yml
+++ b/.github/workflows/generate-maps.yml
@@ -65,28 +65,37 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
-          # Ensure we are up-to-date to avoid non-fast-forward push
-          git fetch origin main
-          git pull --rebase origin main || true
-
           mkdir -p generated
           cp -f mapa_baleares_openmeteo.png generated/
           cp -f mapa_baleares_min.png generated/
           cp -f mapa_baleares_max.png generated/
 
-          git add generated/*.png || true
-          if git diff --cached --quiet; then
-            echo "No changes to commit."
-          else
+          # Up-to-date commit with up to 3 retries to avoid non-fast-forward
+          attempts=0
+          while [ $attempts -lt 3 ]; do
+            attempts=$((attempts+1))
+
+            # Reset local main to remote tip to ensure fast-forward
+            git fetch origin main
+            git checkout -B main origin/main
+
+            git add generated/*.png || true
+            if git diff --cached --quiet; then
+              echo "No changes to commit."
+              exit 0
+            fi
+
             git commit -m "chore: update generated weather maps [skip ci]"
-            # Retry push once on non-fast-forward by rebasing again
             if git push origin HEAD:main; then
               echo "Pushed successfully"
+              exit 0
             else
-              echo "Push failed, attempting rebase and retry..."
-              git fetch origin main
-              git pull --rebase origin main || true
-              git push origin HEAD:main
+              echo "Push failed (attempt $attempts). Retrying..."
+              # Drop the last commit before retrying to avoid stacking duplicates
+              git reset --hard HEAD~1 || true
+              sleep 3
             fi
-          fi
+          done
+          echo "Failed to push after retries" >&2
+          exit 1
 
